[package]
name = "mqtt5-examples"
version = "0.1.0"
edition = "2021"
 
[[bin]]
name = "mqtt5_publisher"
path = "src/publisher.rs"
 
[[bin]]
name = "mqtt5_subscriber"
path = "src/subscriber.rs"

[dependencies]
async-trait = { version = "0.1" }
env_logger = { version = "0.11" }
log = { version = "0.4" }
tokio = { version = "1.44", features = ["full"] }
up-rust = "0.7.0"
up-transport-mqtt5 = { git = "https://github.com/eclipse-uprotocol/up-transport-mqtt5-rust" }
